...

    <string name="app_name">Memory Assistant</string>

    <!--Main-->
    <string name="login">Login</string>
    <string name="learn">Learn</string>
    <string name="practice">Practice</string>
    <string name="recall">Recall</string>
    <string name="preferences">Preferences</string>
    <string name="get_pro">Be A Part</string>
    <string name="apply">Implement</string>
    <string name="my_space">My Space</string>
    <string name="reminders">Reminders</string>
    <string name="title_activity_preferences">Preferences</string> <!--Weird error without this-->

    <!--Practice-->
    <string name="choose_discipline">Choose Discipline</string>
    <string name="numbers">Numbers</string>
...
    <string name="ben">Ben Systems</string>
    <string name="wardrobes">Wardrobes</string>
    <string name="lists">Lists</string>
    <string name="algorithms">Algorithms</string>
    <string name="words">Words</string>

    <string name="f_name">Name</string>
    <string name="here">Enter here</string>
    <string name="do_not_save">Exit without saving</string>
    <string name="my_space_file_picker">My Space file picker</string>
    <string name="search">Search</string>
    <string name="not_found">Not Found</string>
    <string name="search_from_start">Reached the bottom. Searching from the top</string>
    <string name="nameless_file">Did not save nameless file</string>
    <string name="shorter_name">Try again with a shorter name</string>
    <string name="storage_permissions">Permission to access storage is needed</string>
    <string name="check_storage">Please check storage</string>
    <string name="enter_name">Please enter a name</string>

...
    <string name="io_try_again">IOException. Please try again</string>
    <string name="report_to_dev">There was an error, please report this to the developer</string>
    <string name="confused">Confused? Start from the top</string>
    <string name="extra">Extra</string>
    <string name="discipline">discipline</string>
    <string name="speech_rate">Speech rate</string>
    <string name="word_new">New</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="dl_from_play">For correct functioning, please download the app from the Google Play Store</string>
    <string name="storage_full">Device storage full</string>
    <string name="wait">Please wait</string>
    <string name="fake_dates">These dates are not real</string>
    <string name="faulty_translations">Translations might be faulty</string>
...
    <string name="details_of_donation" >Details of donation</string>
    <string name="event_occurred" >Event occurred</string>
    <string name="date_of_event" >Date of event</string>
    <string name="loading_progress_bar" >Loading progress bar</string>
    <string name="practice_level" >Practice level</string>
    <string name="todo" >TODO</string>
    <string name="sliding_tabs" >Sliding tabs</string>
    <string name="view_pager" >View Pager</string>
    <string name="horizontal_scroll" >horizontal scroll</string>
    <string name="card_view" >Card View</string>
    <string name="walkthrough_viewpager" >Walkthrough Viewpager</string>
    <string name="language_spinner" >Language Spinner</string>
    <string name="choose_your_language" >Choose your language</string>
...
