<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_space_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:contentDescription="@string/my_space_file_picker"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/word_new"
        android:src="@drawable/ic_action_add"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/edit_mySpaceFragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/f_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/f_name"
            android:inputType="text"
            tools:ignore="Autofill" />

        <ScrollView
            android:id="@+id/my_space_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/my_space_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/here"
                android:inputType="textMultiLine"
                tools:ignore="Autofill"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

        </ScrollView>

        <EditText
            android:id="@+id/search_edit_text_mySpaceFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:visibility="gone"
            tools:targetApi="o" />

    </LinearLayout>

</RelativeLayout>